--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\12.4\\tomcat90.properties
-j2ee.server.home=C:/java/server/apache-tomcat-9.0.45
-j2ee.server.instance=tomcat90:home=C:\\java\\server\\apache-tomcat-9.0.45
+deploy.ant.properties.file=C:\\Users\\Erick Chavarria\\AppData\\Roaming\\NetBeans\\12.4\\tomcat90.properties
+j2ee.server.home=C:/Program Files (x86)/Apache Software Foundation/Tomcat 9.0
+j2ee.server.instance=tomcat90:home=C:\\Program Files (x86)\\Apache Software Foundation\\Tomcat 9.0
 javac.debug=true
 javadoc.preview=true
 selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
-user.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
+user.properties.file=C:\\Users\\Erick Chavarria\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
