--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,7 +30,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.cdi-api-1.1.jar=C:\\Blueweb\\Projects\\ProyectoInicial\\lib\\cdi-api-1.1.jar
-file.reference.mirage-theme-1.0.2.jar-1=C:\\Users\\admin\\Desktop\\mirage-1.0.2\\mirage-theme-1.0.2.jar
+file.reference.mirage-theme-1.0.2.jar=lib\\mirage-theme-1.0.2.jar
 file.reference.primefaces-8.0.jar=C:\\Blueweb\\Projects\\ProyectoInicial\\lib\\primefaces-8.0.jar
 file.reference.sqljdbc4.jar=C:\\Blueweb\\Projects\\ProyectoInicial\\lib\\sqljdbc4.jar
 includes=**
@@ -46,7 +46,8 @@ javac.classpath=\
     ${file.reference.cdi-api-1.1.jar}:\
     ${file.reference.primefaces-8.0.jar}:\
     ${file.reference.sqljdbc4.jar}:\
-    ${file.reference.mirage-theme-1.0.2.jar-1}
+    ${file.reference.mirage-theme-1.0.2.jar}:\
+    ${libs.jpa20-persistence.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
