--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=Facelets
+auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=JSP
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -30,6 +30,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.cdi-api-1.1.jar=C:\\Blueweb\\Projects\\ProyectoInicial\\lib\\cdi-api-1.1.jar
+file.reference.javax.persistence.jar=lib/javax.persistence.jar
 file.reference.mirage-theme-1.0.2.jar=lib\\mirage-theme-1.0.2.jar
 file.reference.primefaces-8.0.jar=C:\\Blueweb\\Projects\\ProyectoInicial\\lib\\primefaces-8.0.jar
 file.reference.sqljdbc4.jar=C:\\Blueweb\\Projects\\ProyectoInicial\\lib\\sqljdbc4.jar
@@ -47,7 +48,8 @@ javac.classpath=\
     ${file.reference.primefaces-8.0.jar}:\
     ${file.reference.sqljdbc4.jar}:\
     ${file.reference.mirage-theme-1.0.2.jar}:\
-    ${libs.jpa20-persistence.classpath}
+    ${file.reference.javax.persistence.jar}:\
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
